--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="js/libs/bignumber.js/bignumber.min.js"></script>
-    <script src="js/libs/numeral.js/numeral.min.js"></script>
+    <script src="js/bignumber.min.js"></script>
+    <script src="js/numeral.min.js"></script>
     <title>Proveedores</title>
 </head>
 
